# railcam

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
openspec/: project.md
openspec/changes/archive/2026-01-14-add-mp4-sidebyside-zoom/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-14-add-mp4-sidebyside-zoom/specs/aspect-ratio/: spec.md
openspec/changes/archive/2026-01-14-add-mp4-sidebyside-zoom/specs/multi-video/: spec.md
openspec/changes/archive/2026-01-14-add-mp4-sidebyside-zoom/specs/output-format/: spec.md
openspec/changes/archive/2026-01-14-add-mp4-sidebyside-zoom/specs/zoom-normalization/: spec.md
openspec/changes/archive/2026-01-14-add-multi-climber-selection/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-14-add-multi-climber-selection/specs/cli-interface/: spec.md
openspec/changes/archive/2026-01-14-add-speed-climbing-gif-cli/: design.md  proposal.md  tasks.md
openspec/specs/aspect-ratio/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/gif-generation/: spec.md
openspec/specs/multi-video/: spec.md
openspec/specs/output-format/: spec.md
openspec/specs/pose-detection/: spec.md
openspec/specs/video-cropping/: spec.md
openspec/specs/zoom-normalization/: spec.md
src/railcam/: __init__.py  cli.py  composition.py  cropping.py  multi_video.py  output.py  pose.py  processing.py  video.py
tests/: __init__.py  test_composition.py  test_cropping.py  test_multi_video.py  test_pose.py  test_processing.py
(+5 files in other folders)
